Fix scoring panel foul text color on mobile Safari (fixes #254).

--- a/static/css/scoring_panel.css
+++ b/static/css/scoring_panel.css
@@ -416,6 +416,7 @@ dialog::backdrop {
 #foul-container .foul-button {
   height: 120px;
   width: 300px;
+  color: var(--text-active);
 }
 
 .foul-button.red {
